# capped

./: Cargo.toml  LICENSE  readme.md
src/: cap_u16.rs  cap_u32.rs  cap_u64.rs  cap_u8.rs  cap_usize.rs  error.rs  lib.rs  num.rs  string.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs  vec.rs
