[package]
name = "capped"
version = "0.0.1"
edition = "2021"
description = "Provides wrappers around common rust types with capped sizes"
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/RuairidhWilliamson/capped.git"
keywords = ["cap", "limit"]
categories = ["config", "parsing"]
rust-version = "1.60"

[lints.rust]
unsafe_code = "warn"
# unused_crate_dependencies = "warn"

[lints.clippy]
# Cargo
cargo_common_metadata = "warn"
wildcard_dependencies = "warn"

# Restriction
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
exit = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
print_stderr = "warn"
print_stdout = "warn"

# Nursery
nursery = { level = "warn", priority = -1 }
significant_drop_tightening = "allow"
suboptimal_flops = "allow"
option_if_let_else = "allow"

# Pedantic
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
